crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__non_logical_newline_in_string_continuation.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        Lpar,
        0..1,
    ),
    (
        NonLogicalNewline,
        1..2,
    ),
    (
        String {
            value: "a",
            kind: String,
            quote_kind: Single,
        },
        6..9,
    ),
    (
        NonLogicalNewline,
        9..10,
    ),
    (
        String {
            value: "b",
            kind: String,
            quote_kind: Single,
        },
        14..17,
    ),
    (
        NonLogicalNewline,
        17..18,
    ),
    (
        NonLogicalNewline,
        18..19,
    ),
    (
        String {
            value: "c",
            kind: String,
            quote_kind: Single,
        },
        23..26,
    ),
    (
        String {
            value: "d",
            kind: String,
            quote_kind: Single,
        },
        33..36,
    ),
    (
        NonLogicalNewline,
        36..37,
    ),
    (
        Rpar,
        37..38,
    ),
    (
        Newline,
        38..38,
    ),
]
