crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__string.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    (
        String {
            value: "double",
            kind: String,
            quote_kind: Double,
        },
        0..8,
    ),
    (
        String {
            value: "single",
            kind: String,
            quote_kind: Single,
        },
        9..17,
    ),
    (
        String {
            value: "can\\'t",
            kind: String,
            quote_kind: Single,
        },
        18..26,
    ),
    (
        String {
            value: "\\\\\\\"",
            kind: String,
            quote_kind: Double,
        },
        27..33,
    ),
    (
        String {
            value: "\\t\\r\\n",
            kind: String,
            quote_kind: Single,
        },
        34..42,
    ),
    (
        String {
            value: "\\g",
            kind: String,
            quote_kind: Single,
        },
        43..47,
    ),
    (
        String {
            value: "raw\\'",
            kind: RawString,
            quote_kind: Single,
        },
        48..56,
    ),
    (
        String {
            value: "\\420",
            kind: String,
            quote_kind: Single,
        },
        57..63,
    ),
    (
        String {
            value: "\\200\\0a",
            kind: String,
            quote_kind: Single,
        },
        64..73,
    ),
    (
        Newline,
        73..73,
    ),
]
