crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__string_continuation_with_mac_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: string_continuation_with_eol(MAC_EOL)
---
[
    (
        String {
            value: "abc\\\rdef",
            kind: String,
            quote_kind: Double,
        },
        0..10,
    ),
    (
        Newline,
        10..10,
    ),
]
