crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__string_continuation_with_unix_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: string_continuation_with_eol(UNIX_EOL)
---
[
    (
        String {
            value: "abc\\\ndef",
            kind: String,
            quote_kind: Double,
        },
        0..10,
    ),
    (
        Newline,
        10..10,
    ),
]
