crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__string_continuation_with_windows_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: string_continuation_with_eol(WINDOWS_EOL)
---
[
    (
        String {
            value: "abc\\\r\ndef",
            kind: String,
            quote_kind: Double,
        },
        0..11,
    ),
    (
        Newline,
        11..11,
    ),
]
