crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__triple_quoted_mac_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: triple_quoted_eol(MAC_EOL)
---
[
    (
        String {
            value: "\r test string\r ",
            kind: String,
            quote_kind: TripleQuotedDouble,
        },
        0..21,
    ),
    (
        Newline,
        21..21,
    ),
]
