crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__triple_quoted_unix_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: triple_quoted_eol(UNIX_EOL)
---
[
    (
        String {
            value: "\n test string\n ",
            kind: String,
            quote_kind: TripleQuotedDouble,
        },
        0..21,
    ),
    (
        Newline,
        21..21,
    ),
]
