crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__triple_quoted_windows_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: triple_quoted_eol(WINDOWS_EOL)
---
[
    (
        String {
            value: "\r\n test string\r\n ",
            kind: String,
            quote_kind: TripleQuotedDouble,
        },
        0..23,
    ),
    (
        Newline,
        23..23,
    ),
]
